tests/programs/a1/local/valid/InterfaceMethodNoBodyExample.java
public interface InterfaceMethodNoBodyExample {
    void methodWithoutBody();
}
