tests/programs/a1/local/invalid/test_synchronized.java
public class test_synchronized {
    public synchronized int m() {
        return 42;
    }
}